--- a/src/css/utils/layout.styl
+++ b/src/css/utils/layout.styl
@@ -20,18 +20,24 @@ h2
 	set-type-size(x-large, true)
 	margin-top 1.5rem
 h3
+	set-type-size(x-large, true)
+	margin-top 1.5rem
+	padding 0 1rem
+	font-family Atlas Grotesk Web, sans-serif
+	font-weight 600
+h4
 	set-type-size(large, true)
 	margin-top 1.5rem
-h4
-	set-type-size(medium, true)
 	margin-top 1.5rem
+	padding 0 1rem
+	font-family Atlas Grotesk Web, sans-serif
 h5
 	set-type-size(root, true)
 	margin-top 1.5rem
 h6
 	set-type-size(small, true)
 	margin-top 1.5rem
-p 
+p
 	margin 1.5rem 0
 	set-type-size(root, true)
 	+mq('bp-3')
@@ -49,7 +55,7 @@ strong, b
 
 em, i
 	font-style italic
-	
+
 ul
 	list-style-type none
 
