--- a/src/css/utils/variables.styl
+++ b/src/css/utils/variables.styl
@@ -45,7 +45,9 @@ $off-white = #f4f4f4
 
 $bg = #fff
 $fg = $off-black
-$primary= #f33
+$primary= #FE4A49
+$secondary = #2AB7CA
+$tertiary = #FED766
 
 $column-width = 40rem
 
@@ -64,7 +66,7 @@ $type-size = {
     }
     small: {
         size: 14px,
-        line-height: 1.5    
+        line-height: 1.5
     }
     root: {
         size: 16px,
