--- a/src/html/index.hbs
+++ b/src/html/index.hbs
@@ -28,6 +28,8 @@
 	<main id='content'>
 
 		{{> story/intro }}
+		{{> story/need }}
+		{{> story/work }}
 		<!-- PUT ALL YOUR HTML HERE-->
 
 	</main>
@@ -35,6 +37,7 @@
 	{{!--
 	<script src='{{basepath}}assets/scripts/d3.v5.0.0.min.js'></script> --}}
 	<script src='{{basepath}}assets/scripts/d3.v4.12.0+jetpack.min.js'></script>
+	<script src='assets/scripts/prism.js'></script>
 	<script src='bundle.js?version={{timestamp}}' async></script>
 	<script src='https://pudding.cool/assets/scripts/pudding-footer.js' async></script>
 </body>
