Wrapping up modified histogram section

--- a/src/css/story/waffle.styl
+++ b/src/css/story/waffle.styl
@@ -1,19 +1,10 @@
-.container
+.waffle
   display flex
   flex-wrap wrap
   width 140px
   margin 0 auto
 
-
 .block
   width 10px
   height 10px
   margin 2px
-
-
-.block-false
-  background-color #cccccc
-
-
-.block-true
-  background-color #FE4A49
