--- a/src/html/index.hbs
+++ b/src/html/index.hbs
@@ -30,6 +30,8 @@
 		{{> story/intro }}
 		{{> story/need }}
 		{{> story/work }}
+		{{> story/hist }}
+		{{> story/stack }}
 		<!-- PUT ALL YOUR HTML HERE-->
 
 	</main>
