--- a/src/assets/prism/waffle.css
+++ b/src/assets/prism/waffle.css
@@ -1,4 +1,4 @@
-.container{
+.waffle{
   display: flex
   flex-wrap: wrap
   width: 140px
@@ -8,12 +8,4 @@
   width: 10px;
   height: 10px;
   margin: 2px
-}
-
-.block-false{
-  background-color: #cccccc
-}
-
-.block-true{
-  background-color: #FE4A49
 }
