working on stacked bar chart

--- a/src/html/partials/story/stack.hbs
+++ b/src/html/partials/story/stack.hbs
@@ -2,21 +2,22 @@
   <h3>{{copy.stack-title}}</h3>
   <p class='prose'>{{{copy.stack}}}</p>
   <img src='assets/images/stack.png' class='img-desktop'>
+  <p class='prose'>{{{copy.stack-post}}}</p>
 
   <h4>HTML</h4>
-  <p class='prose'>{{{copy.waffle-html}}}</p>
-  <pre data-src='assets/prism/waffle.html'></pre>
+  <p class='prose'>{{{copy.stack-html}}}</p>
+  <pre data-src='assets/prism/stack.html'></pre>
 
   <h4>JavaScript</h4>
-  <p class='prose'>{{{copy.waffle-js}}}</p>
-  <pre data-src='assets/prism/waffle.js'></pre>
+  <p class='prose'>{{{copy.stack-js}}}</p>
+  <pre data-src='assets/prism/stack.js'></pre>
 
   <h4>CSS</h4>
-  <p class='prose'>{{{copy.waffle-css}}}</p>
-  <pre data-src='assets/prism/waffle.css'></pre>
-  <p class='prose'>{{{copy.waffle-css-post}}}</p>
+  <p class='prose'>{{{copy.stack-css}}}</p>
+  <pre data-src='assets/prism/stack.css'></pre>
+  <p class='prose'>{{{copy.stack-css-post}}}</p>
 
   <h4>The Results</h4>
-  <p class='prose'>{{{copy.waffle-results}}}</p>
+  <p class='prose'>{{{copy.stack-results}}}</p>
   <div class='stack-chart'>
 </section>
