--- a/src/css/story/hist.styl
+++ b/src/css/story/hist.styl
@@ -14,6 +14,7 @@
       width 20px
       height 20px
       background-color $primary
+      margin 0.1rem
 
     text
       font-family Atlas Grotesk Web, sans-serif
