Wrapping up stack section

--- a/src/html/partials/story/hist.hbs
+++ b/src/html/partials/story/hist.hbs
@@ -1,4 +1,4 @@
-<section class='hist'>
+<section class='hist' id='hist'>
   <h3>{{copy.hist-title}}</h3>
   {{#each copy.hist}}
     <p class='prose'>{{{value}}}</p>
