--- a/src/html/index.hbs
+++ b/src/html/index.hbs
@@ -32,6 +32,7 @@
 		{{> story/work }}
 		{{> story/hist }}
 		{{> story/stack }}
+		{{> story/conclusion }}
 		<!-- PUT ALL YOUR HTML HERE-->
 
 	</main>
