--- a/src/assets/prism/waffle.css
+++ b/src/assets/prism/waffle.css
@@ -1,11 +1,11 @@
-.waffle{
-  display: flex
-  flex-wrap: wrap
-  width: 140px
+.waffle {
+  display: flex;
+  flex-wrap: wrap;
+  width: 140px;
 }
 
-.block{
+.block {
   width: 10px;
   height: 10px;
-  margin: 2px
+  margin: 2px;
 }
