--- a/src/css/story/story.styl
+++ b/src/css/story/story.styl
@@ -47,7 +47,7 @@ pre
 	margin 1.5rem auto
 	max-width 38rem
 	width 90%
-  max-height 10rem
+  max-height 100px !important
 	set-type-size(small)
 
 
